test/valid/AbstractClassExtendsConcrete/Super.plume
/**
 * @author Vasco T. Vasconcelos
 * @version $Id: Super.plume 482 2012-06-04 19:07:29Z tcomp000 $
 */
class Super extends Object is

	method m : () -> String is
		"Super"